# qr-url

./: CLAUDE.md  Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml  pages.yml  release.yml
examples/wasm/: README.md  index.html  qr-circle-v3.html  qr-circle.html  qr-style-debugger.html  qr-tweakboard.html  test-sector-rendering.js  test-timing-pattern.html
examples/wasm/pkg/: qr_url.js  qr_url_bg.wasm  qr_url_uuid4.js  qr_url_uuid4_bg.wasm
src/: lib.rs
