[package]
name = "qr-url"
version = "0.2.0"
edition = "2024"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Encode UUID v4 into compact QR-friendly URLs using Base44 (removes 25 fixed bits including signature, alphanumeric mode optimized, 19 characters)"
license = "Apache-2.0"
repository = "https://github.com/GoAskAway/qr-url"

[lib]
name = "qr_url"
crate-type = ["rlib", "cdylib"]

[features]
default = []

[dependencies]
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
thiserror = "2"
hex = "0.4"
qr-base44 = { git = "https://github.com/kookyleo/qr-base44.git", branch = "feat/optimal-bit-encoding" }

# WASM
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
rand = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["js"] }
js-sys = "0.3"

[[bin]]
name = "qr-url"
path = "src/bin/qr-url.rs"

