[package]
name = "qr-url"
version = "0.2.0"
edition = "2024"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Encode custom UUID variant with signature '41c2ae' into compact QR-friendly URLs using Base44 (removes 25 fixed bits, 19 characters, not standard UUID v4)"
license = "Apache-2.0"
repository = "https://github.com/GoAskAway/qr-url"

[lib]
name = "qr_url"
crate-type = ["rlib", "cdylib"]

[features]
default = []
server = ["tokio", "serde", "serde_json", "tracing", "tracing-subscriber", "urlencoding", "tokio-rustls", "rustls-pemfile"]

[dependencies]
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
thiserror = "2"
hex = "0.4"
qr-base44 = "0.1"
clap = { version = "4", features = ["derive"] }

# HTTP server (optional, for server subcommand)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
urlencoding = { version = "2", optional = true }

# WASM
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
rand = "0.9"
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["js"] }
js-sys = "0.3"

[[bin]]
name = "qr-url"
path = "src/bin/qr-url.rs"

